Main content made visible fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,7 @@ main {
     background-color: burlywood;
     /* Make main element take up surplus space to push footer to bottom */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
